[gd_scene load_steps=11 format=3 uid="uid://ddifmu7obmqe2"]

[ext_resource type="Script" path="res://assets/scripts/Fireball.gd" id="1_g27v3"]
[ext_resource type="Texture2D" uid="uid://ujab88aefoss" path="res://assets/sprites/projectiles/fireball_white_bottom.png" id="2_awhom"]
[ext_resource type="PackedScene" uid="uid://ba8s1st1lqc5e" path="res://assets/scenes/Explosion.tscn" id="2_c058i"]
[ext_resource type="Curve" uid="uid://0jrp0f2i3810" path="res://assets/curves/Fireball_Intensity.tres" id="3_0rcyg"]
[ext_resource type="Texture2D" uid="uid://cda4ju411if4h" path="res://assets/sprites/projectiles/fireball_white_top.png" id="3_hlxu0"]
[ext_resource type="AudioStream" uid="uid://bwrorlrgppgry" path="res://assets/sound/Fireball1.mp3" id="4_r4vrk"]
[ext_resource type="Material" uid="uid://b6ukcccstmrxf" path="res://assets/materials/FireballTrail.tres" id="5_aticd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pdiw0"]
radius = 23.0

[sub_resource type="Gradient" id="Gradient_bl0sd"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_230xt"]
gradient = SubResource("Gradient_bl0sd")
fill_from = Vector2(0, 1)
fill_to = Vector2(0, 0)

[node name="Fireball" type="Area2D" groups=["Projectile"]]
script = ExtResource("1_g27v3")
ExplosionEffect = ExtResource("2_c058i")
intensity_curve = ExtResource("3_0rcyg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pdiw0")
disabled = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="FireballBottom" type="Sprite2D" parent="."]
self_modulate = Color(0.894118, 0.576471, 0.27451, 1)
z_index = 2
texture = ExtResource("2_awhom")

[node name="FireballTop" type="Sprite2D" parent="FireballBottom"]
z_index = 3
texture = ExtResource("3_hlxu0")

[node name="Trail" type="GPUParticles2D" parent="FireballBottom"]
z_index = -1
amount = 20
process_material = ExtResource("5_aticd")
texture = SubResource("GradientTexture2D_230xt")
speed_scale = 2.0
randomness = 0.2
fract_delta = false

[node name="Fire_1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_r4vrk")
volume_db = -20.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
